================================
========== Change Log ==========
================================

============ v1.1.2 ============
# Adding more defined visibility to all methods, preventing users from accessing the $this->globals variable.
# Adding support for file uploads via Facebook Ignited in the fb_config.php
# Added a new method fb_notification() to handle Facebook notifications.
============ v1.1.1 ============
# Upgraded the CodeIgniter to v2.1.3
# Updated the Facebook PHP SDK to v3.2.0
# Added the script redirect to fb_logout_url() method.
# Clarified the fb_request_dialog() by change the parameter $name to $message.
# Cleaned up code on several methods, allowing for code to be read easier.
============ v1.1.0 ============
# Added fb_post_to_feed_dialog(), fb_send_dialog(), fb_request_dialog() and fb_fql() courtesy of Kimmik from CI Forums.
# Resolved issues #4 & #6 regarding the demo login link being wrong. The variable was not encased in <?= ?>
# Updated fb_is_liked() function to correctly pull the like status.
============ v1.0.9 ============
# Upgraded the CodeIgniter to v2.1.2
============ v1.0.8 ============
# Upgraded the CodeIgniter to v2.1.1
# Fixed Git Issue #2 Autoload not correct
# Removed the register form function because we can already use json_encode to do the same thing.
# Added the custom redirect parameter to fb_login_url()
============ v1.0.7 ============
# Upgraded the CodeIgniter to v2.1.0
============ v1.0.6 ============
# Upgraded the Facebook PHP SDK to v3.1.1
# Updated CodeIgniter to v2.0.3
# Added the ability to specify the global variable returned in from fb_get_app().
# Added the choice of full facebook friends list or just friends who have app installed to fb_list_friends().
# Added the ability to choose whether a user is redirected to the login page. Default is false.
# Removed the fb_get_auth_scope() & fb_get_canvas() functions, due to being able to retrieve global vars from fb_get_app().
============ v1.0.5 ============